--- a/2dcontext/tools/templates.yaml
+++ b/2dcontext/tools/templates.yaml
@@ -279,7 +279,7 @@ index: |
     Last updated %(updated)s.
     
     <p>Based on the <a
-    href="http://www.whatwg.org/specs/web-apps/current-work/#the-canvas">HTML5</a>
+    href="http://www.whatwg.org/specs/web-apps/current-work/#the-canvas">HTML</a>
     Draft Standard &mdash; 22 February 2010. See also the <a
     href="spec.html">annotated specification</a>.
 
