Update some tests to work better

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {"host": "web-platform.test",
- "ports":{"http":["auto", "auto"],
+ "ports":{"http":[8000, "auto"],
           "https":["auto"],
           "ws":["auto"]},
- "external_domain":"w3c-test.org"}
+ "external_domain":"w3c-test.org",
+ "log_level":"debug"}
