adding ability to configure alternate browsers
to be able to run against selendroid / chrome after starting selendroid-standaone-server or chromedriver respectively.

--- a/webdriver/webdriver.cfg
+++ b/webdriver/webdriver.cfg
@@ -1,2 +1,11 @@
 [Default]
 browser: Firefox
+
+[selendroid]
+browser: Remote
+capabilities: {"platform": "ANDROID", "browserName": "android"}
+
+[chrome]
+browser: Remote
+url: http://localhost:9515
+capabilities: {"browserName": "chrome"}
