updates based on code review

--- a/webdriver/webdriver.cfg
+++ b/webdriver/webdriver.cfg
@@ -1,4 +1,10 @@
-[Default]
+# to add more browsers specify a [section header] with the name
+# the 'browser' is currently required
+# url and capabilities are optional
+# url is the 'command_executor' argument passed in to the 'browser' class
+# capabilities is the 'desired_capabilities' argument.
+
+[firefox]
 browser: Firefox
 
 [selendroid]
@@ -9,3 +15,10 @@ capabilities: {"platform": "ANDROID", "browserName": "android"}
 browser: Remote
 url: http://localhost:9515
 capabilities: {"browserName": "chrome"}
+
+[ie]
+browser: Ie
+
+[ios-driver]
+browser: Remote
+capabilities: {"browserName": "iphone"}
