being able to specify 'remote' per browser to use ip address of host machine rather than '127.0.0.1'

--- a/webdriver/webdriver.cfg
+++ b/webdriver/webdriver.cfg
@@ -10,6 +10,7 @@ browser: Firefox
 [selendroid]
 browser: Remote
 capabilities: {"platform": "ANDROID", "browserName": "android"}
+remote: True
 
 [chrome]
 browser: Remote
