adding ability to configure alternate browsers
Signed-off-by: AutomatedTester <dburns@mozilla.com>

--- a/webdriver/webdriver.cfg
+++ b/webdriver/webdriver.cfg
@@ -1,2 +1,24 @@
-[Default]
+# to add more browsers specify a [section header] with the name
+# the 'browser' is currently required
+# url and capabilities are optional
+# url is the 'command_executor' argument passed in to the 'browser' class
+# capabilities is the 'desired_capabilities' argument.
+
+[firefox]
 browser: Firefox
+
+[selendroid]
+browser: Remote
+capabilities: {"platform": "ANDROID", "browserName": "android"}
+
+[chrome]
+browser: Remote
+url: http://localhost:9515
+capabilities: {"browserName": "chrome"}
+
+[ie]
+browser: Ie
+
+[ios-driver]
+browser: Remote
+capabilities: {"browserName": "iphone"}
