Added support for bind_hostname options.
See also related wptserve PR https://github.com/w3c/wptserve/pull/10

--- a/config.default.json
+++ b/config.default.json
@@ -4,4 +4,5 @@
           "ws":["auto"]},
  "external_domain":"w3c-test.org",
  "check_subdomains": true,
- "log_level":"debug"}
+ "log_level":"debug",
+ "bind_hostname": true}
