Add new WebDriver local end. Update tests to use the new local end.

--- a/webdriver/webdriver.cfg
+++ b/webdriver/webdriver.cfg
@@ -5,20 +5,22 @@
 # capabilities is the 'desired_capabilities' argument.
 
 [firefox]
-browser: Firefox
+capabilities: {"browserName": "firefox"}
+mode: compatibility
 
 [selendroid]
-browser: Remote
 capabilities: {"platform": "ANDROID", "browserName": "android"}
+mode: compatibility
 
 [chrome]
-browser: Remote
 url: http://localhost:9515
 capabilities: {"browserName": "chrome"}
+mode: compatibility
 
 [ie]
-browser: Ie
+capabilities: {"browserName": "ie"}
+mode: compatibility
 
 [ios-driver]
-browser: Remote
 capabilities: {"browserName": "iphone"}
+mode: compatibility
