Add BlackBerry browser remote URL details to the webdriver.cfg file.

--- a/webdriver/webdriver.cfg
+++ b/webdriver/webdriver.cfg
@@ -22,3 +22,8 @@ browser: Ie
 [ios-driver]
 browser: Remote
 capabilities: {"browserName": "iphone"}
+
+[blackberry]
+browser: Remote
+url: http://169.254.0.1:1337
+capabilities: {"browserName": "blackberry"}
