--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "resources"]
 	path = resources
 	url = git://github.com/w3c/testharness.js.git
+  ignore = dirty
 [submodule "tools/wptserve"]
 	path = tools/wptserve
 	url = https://github.com/w3c/wptserve.git
