add wptserve to ignores

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,7 @@
 [submodule "tools/wptserve"]
 	path = tools/wptserve
 	url = https://github.com/w3c/wptserve.git
+	ignore = dirty
 [submodule "tools/pywebsocket"]
 	path = tools/pywebsocket
 	url = https://github.com/w3c/pywebsocket.git
