--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "resources"]
 	path = resources
-	url = git://github.com/w3c/testharness.js.git
+	url = https://github.com/w3c/testharness.js.git
   ignore = dirty
 [submodule "tools/wptserve"]
 	path = tools/wptserve
