--- a/2dcontext/tools/tests2d.yaml
+++ b/2dcontext/tools/tests2d.yaml
@@ -2819,7 +2819,7 @@
     - broken.png
   code: |
     var img = document.getElementById('broken.png');
-    @assert throws INVALID_STATE_ERR ctx.createPattern(img, 'repeat');
+    @assert ctx.createPattern(img, 'repeat') === null; @moz-todo
 
 - name: 2d.pattern.repeat.empty
   testing:
@@ -2857,6 +2857,12 @@
     - 2d.pattern.unrecognised
   code: |
     @assert throws SYNTAX_ERR ctx.createPattern(canvas, "invalid");
+
+- name: 2d.pattern.repeat.unrecognisednull
+  testing:
+    - 2d.pattern.unrecognised
+  code: |
+    @assert throws SYNTAX_ERR ctx.createPattern(canvas, "null");
 
 - name: 2d.pattern.repeat.case
   testing:
