--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,10 +1,12 @@
 exclude MANIFEST.in
 include requirements.txt
-include wptrunner/device_setup/*
+include wptrunner/executors/b2g_setup/*
 include config.ini
-include wptrunner/gecko_runner.html
+include wptrunner/testharness_runner.html
 include wptrunner/testharnessreport.js
-include wptrunner/testharness.js
-include wptrunner/reftest.js
+include wptrunner/executors/testharness_marionette.js
+include wptrunner/executors/testharness_webdriver.js
+include wptrunner/executors/reftest.js
+include wptrunner/executors/reftest-wait.js
 include wptrunner/config.json
-include wptrunner/server-locations.txt
+include wptrunner/browsers/server-locations.txt
