--- a/wptrunner/config.json
+++ b/wptrunner/config.json
@@ -2,4 +2,5 @@
  "ports":{"http":[8000, 8001],
           "https":[8443],
           "ws":[8888]},
- "check_subdomains":false}
+ "check_subdomains":false,
+ "bind_hostname":%(bind_hostname)s}
